fix timeout calculation and minor code clean-up